# alpha-ai-0

./: .dockerignore  .env.example  .gitignore  Dockerfile  Pipfile  README.md  chat_utils.py  chatbot.py  config.py  default.sqlite  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py  system_prompt.py  vector_store.py
data/: essay-structure-and-samples.csv  knowledge.txt
data/essays/: demo_ivey_essay_1.txt  jayen_ivey_essay_2.txt  jenna_ivey_essay_1.txt  jenna_ivey_essay_2.txt  karina_ivey_essay_1.txt  luke_ivey_essay_2.txt
data/ivey/: demo_ivey_essay_2.txt  jayen_ivey_essay_1.txt  karina_ivey_essay_2.txt  luke_ivey_essay_1.txt
data/queens/: essays.txt
merging_index/: default__vector_store.json  docstore.json  index_store.json
sentence_index/: default__vector_store.json  docstore.json  index_store.json
src/: chat_utils.py  streamlit_app.py  system_prompt.py  vector_store.py
utils/: automerging_retrieval.py  trulens_recorder.py
